kubernetes/base/n8n-deployment-workers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: n8n-worker
  name: n8n-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      service: n8n-worker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        service: n8n-worker
    spec:
      containers:
        - command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n worker
          image: n8nio/n8n
          name: n8n-worker
          ports:
            - containerPort: 9100
              name: metrics
          resources:
            requests:
              memory: "250Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-claim0
      restartPolicy: Always
      volumes:
        - name: n8n-claim0
          persistentVolumeClaim:
            claimName: n8n-claim0
        - name: n8n-secret
          secret:
            secretName: n8n-secret
        - name: postgres-secret
          secret:
            secretName: postgres-secret
