kubernetes/base/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: n8n
  name: n8n-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "9100"
spec:
  ports:
    - name: http
      port: 5678
      targetPort: 5678
      protocol: TCP
    - name: metrics
      port: 9100
      targetPort: 9100
      protocol: TCP
  selector:
    service: n8n
  type: ClusterIP
