kubernetes/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: redis
  name: redis-service
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    service: redis
  type: ClusterIP
